# ironcore-alloy

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  RELEASING.md  TSC_ALLOY_MIGRATION_GUIDE.md  flake.nix  rust-toolchain.toml  uniffi-bindgen-cs.rs  uniffi-bindgen-java.rs  uniffi.toml
.github/: .gitignore  9FA43559.asc.iron  PGP.md  dependabot.yml  gradle.properties.iron
.github/scripts/: rtd-fetch-docs.py
.github/workflows/: bump-version.yaml  integration-test.yaml  rust-cargo-update.yaml  rust-ci.yaml  rust-daily.yaml  sdk-ci.yaml  sdk-release.yaml
benches/: README.md  demo-tsp.conf  ironcore_alloy_bench.rs
core/: Cargo.toml  README.md  uniffi.toml
core/kotlin/: .gitignore  build.gradle.kts  settings.gradle.kts
core/kotlin/src/test/kotlin/com/ironcorelabs/cloaked_ai/: CloakedAiTest.kt
core/kotlin/src/test/kotlin/com/ironcorelabs/ironcore_alloy/: IroncoreAlloyTest.kt
core/python/cloaked-ai/: .readthedocs.yaml  README.md  RELEASING.md  mkdocs.yml  pyproject.toml  rust-toolchain-from-file.sh
core/python/cloaked-ai/cloaked_ai/: __init__.py
core/python/cloaked-ai/docs/: api-reference.md  requirements.txt
core/python/cloaked-ai/tests/: __init__.py  test_cloaked_ai.py
core/python/ironcore-alloy/: .readthedocs.yaml  README.md  RELEASING.md  pyproject.toml  rust-toolchain-from-file.sh
core/python/ironcore-alloy/docs/: api-reference.md
core/python/ironcore-alloy/ironcore_alloy/: __init__.py
core/python/ironcore-alloy/tests/: test_ironcore_alloy.py
core/src/: deterministic.rs  errors.rs  lib.rs  standard.rs  util.rs
core/src/document/: aes.rs  cmk.rs  mod.rs
core/src/saas_shield/: config.rs  deterministic.rs  mod.rs  standard.rs  vector.rs
core/src/standalone/: config.rs  deterministic.rs  mod.rs  standard.rs  vector.rs
core/src/tenant_security_client/: core.rs  errors.rs  mod.rs  request.rs  rest.rs
core/src/vector/: crypto.rs  mod.rs
core/tests/: foreign_tests_python.rs
core/tests/common/: mod.rs
csharp/: .gitignore  IroncoreAlloy.Tests.csproj  IroncoreAlloyTest.cs  README.md  fix_bindings.py
example-integrations/elasticsearch/: README.md  elasticsearch-cloaked-hybrid-search.py  pyproject.toml
example-integrations/milvus/: README.md  docker-compose.yml  milvus-semantic-search.py  pyproject.toml
example-integrations/opensearch/: README.md  opensearch-cloaked-hybrid-search.py  pyproject.toml
example-integrations/pgvector/: README.md  docker-compose.yml  pgvector-semantic-search.py  pyproject.toml
example-integrations/pinecone/: README.md  pinecone-semantic-search.ipynb  pinecone-semantic-search.py  pyproject.toml
example-integrations/qdrant/: Cargo.toml  README.md
example-integrations/qdrant/src/: main.rs
example-integrations/weaviate/: README.md  docker-compose.yml  pyproject.toml  weaviate-semantic-search.py
examples/: README.md  demo-tsp.conf
examples/python/: .gitignore  Pipfile  README.md  pyproject.toml
examples/python/saas-shield/: standard-roundtrip.py  vector-roundtrip.py  vector-search.py
examples/python/standalone/: elasticsearch-cloaked-hybrid-search.py  opensearch-cloaked-hybrid-search.py  pinecone-semantic-search-encrypted.ipynb  standard-roundtrip.py  streaming-roundtrip.py  vector-roundtrip.py  vector-search.py  weaviate-semantic-search.py
examples/rust/qdrant-example/: Cargo.toml
examples/rust/simple-roundtrip/: Cargo.toml  README.md
examples/rust/standalone/qdrant-example/src/: main.rs
examples/rust/standalone/simple-roundtrip/: .gitignore  Cargo.toml  README.md
examples/rust/standalone/simple-roundtrip/src/: main.rs
examples/rust/standalone/streaming-roundtrip/: .gitignore  Cargo.toml  README.md
examples/rust/standalone/streaming-roundtrip/src/: main.rs
java/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
java/benchmarks/src/: README.md  SaasShieldBenchmark.kt  StandaloneBenchmark.kt
java/src/jmh/java/com/ironcorelabs/ironcore_alloy_java/: README.md  SaasShieldBenchmark.java  StandaloneBenchmark.java  docker-compose.yml
java/src/test/java/com/ironcorelabs/ironcore_alloy_java/: IroncoreAlloyTest.java
kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
kotlin/benchmarks/src/: IronCoreAlloyBenchmark.kt  README.md  SaasShieldBenchmark.kt  StandaloneBenchmark.kt  docker-compose.yml
kotlin/src/bench/: IroncoreAlloyBenches.kt
kotlin/src/test/kotlin/com/ironcorelabs/ironcore_alloy/: IroncoreAlloyTest.kt
python/ironcore-alloy/: .readthedocs.yaml  BENCHMARKS.md  README.md  RELEASING.md  bench.py  hatch_build.py  pyproject.toml
python/ironcore-alloy/docs/: index.md
python/ironcore-alloy/docs/stylesheets/: extra.css
python/ironcore-alloy/tests/: test_ironcore_alloy.py
scripts/: clean-generated-java.sh
src/: deterministic.rs  errors.rs  lib.rs  standard.rs  standard_attached.rs  streaming.rs  util.rs
src/saas_shield/: config.rs  deterministic.rs  mod.rs  standard.rs  standard_attached.rs  vector.rs
src/standalone/: config.rs  deterministic.rs  mod.rs  standard.rs  standard_attached.rs  vector.rs
src/tenant_security_client/: errors.rs  mod.rs  request.rs  rest.rs
src/util/: mod.rs  reseeding_rng.rs
src/vector/: crypto.rs  mod.rs
tests/: demo-tsp.conf  deterministic.rs  docker-compose.yml  foreign_tests_csharp.rs  foreign_tests_java.rs  foreign_tests_kotlin.rs  foreign_tests_python.rs  legacy_format.rs  standard.rs  standard_attached.rs  vector.rs
tests/common/: mod.rs
