[package]
name = "ironcore-alloy"
version = "0.10.3-pre.1"
description = "IronCore Labs SDK for all your different Application Layer Encryption needs"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
edition = "2021"
# We exclude Cargo.lock instead of deleting it because we want consistent builds for generated SDKs
exclude = ["Cargo.lock"]
license = "AGPL-3.0-only"
documentation = "https://docs.rs/ironcore-alloy"
readme = "README.md"
repository = "https://github.com/IronCoreLabs/ironcore-alloy"
categories = ["cryptography"]
keywords = ["cryptography", "saas-shield", "ALE", "cloaked-ai"]
rust-version = "1.75.0"

[dependencies]
aes-gcm = "0.10"
aes-siv = "0.7"
async-trait = "0.1.74"
base64 = "0.21"
base64_type = "0.2"
bytes = { version = "1.4.0", features = ["serde"] }
convert_case = "0.6.0"
futures = "0.3.29"
hmac = { version = "0.12.1", features = ["std"] }
ironcore-documents = "0.1"
itertools = "0.11"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
protobuf = { version = "3.3", features = ["with-bytes"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
regex = "1.10.2"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
ring = "0.16.20"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["float_roundtrip"] }
thiserror = "1.0.50"
uniffi = { version = "0.26.0", features = ["cli", "tokio"] }
z85 = "3.0.5"

[dev-dependencies]
approx = "0.5.1"
ascii85 = "0.2.1"
assertables = "7.0.1"
base64 = "0.21.5"
base85 = "2.0.0"
camino = "1.1"
criterion = { version = "0.5", features = ["async_tokio"] }
hex = "0.4.3"
hex-literal = "0.4.1"
lazy_static = "1.4"
proptest = "1.2.0"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
uniffi_bindgen = "0.26.0"
z85 = "3.0.5"

[features]
integration_tests = []

[[bench]]
name = "ironcore_alloy_bench"
path = "benches/ironcore_alloy_bench.rs"
harness = false

# This is needed to allow extra options to be passed to criterion
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false
crate-type = ["cdylib", "lib"]
name = "ironcore_alloy"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

# used to create the smallest cdylib binary we can to ship with the library in each ecosystem.
# 6.9M vs 1.5M in initial testing. Can further have `strip` (the Unix utility) run on it to save ~0.2 MB more.
# WARNING: be careful changing this, since downstream integration tests (in "core/tests") depend on this profile.
[profile.release]
opt-level = 3       # Check 'z' sometimes in case much smaller. Initial testing showed 0.1M size difference but 25% performance hit, so 3 is better.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = 'debuginfo'
