# hatch shell

[project]
name = "pgvector-example"
authors = [{ name = "IronCore Labs", email = "info@ironcorelabs.com" }]
requires-python = ">=3.9"
dependencies = [
    "ironcore-alloy>=0.11.2,<0.12",
    "sentence_transformers==2.3.1",
    "pgvector==0.2.5",
    "asyncpg==0.29.0",
]
dynamic = ["version"]
