# hatch shell

[project]
name = "pinecone-example"
authors = [{ name = "IronCore Labs", email = "info@ironcorelabs.com" }]
requires-python = ">=3.8"
dependencies = [
    "ironcore-alloy>=0.10.3,<0.11",
    "sentence_transformers==2.3.1",
    "pinecone-client[grpc]==2.2.4",
    "pinecone-datasets==0.6.2",
]
dynamic = ["version"]
