# hatch shell

[project]
name = "pinecone-example"
authors = [{ name = "IronCore Labs", email = "info@ironcorelabs.com" }]
requires-python = ">=3.9"
dependencies = [
    "ironcore-alloy>=0.11.2,<0.12",
    "sentence_transformers==2.3.1",
    "pinecone-client[grpc]==2.2.4",
    "pinecone-datasets==0.6.2",
]
dynamic = ["version"]
