[package]
name = "qdrant-example"
version = "0.11.3-rc.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
futures = "0.3.30"
hex-literal = "0.4.1"
ironcore-alloy = { path = "../../" }
qdrant-client = "1.7.0"
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tonic = "0.12.3"
uuid = { version = "1.7.0", features = ["v4"] }
