# using https://hatch.pypa.io/latest/
# hatch build -t wheel
# hatch test --all
# hatch test --cover
# hatch shell
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ironcore-alloy"
authors = [{ name = "IronCore Labs", email = "info@ironcorelabs.com" }]
description = "Python bindings to the IronCore Labs Alloy SDK. Used for encrypting and decrypting embeddings and their related metadata."
readme = "README.md"
# unless we use specific features of something new (our known specific features are 3.8+), python ecosystem standard is
# for this to be the lowest currently not-EOL version (https://devguide.python.org/versions/).
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://ironcorelabs.com"

[tool.hatch.version]
# version is locked to the Rust SDK version in Cargo.toml
path = "../../Cargo.toml"
pattern = "^version = \"(?P<version>[^\"]+)\"$"

[tool.hatch.build]
artifacts = ["*.so", "*.dylib"]

# tells hatch to use our `hatch_build.py` file
[tool.hatch.build.targets.wheel.hooks.custom]

[tool.hatch.envs.default]
installer = "uv"
# if you ever run into this failing, manually run `hatch python install all` once
python-sources = ["internal"]
python = "3.10"

[tool.hatch.envs.docs]
dependencies = ["mkdocs.material==9.7.0", "mkdocstrings-python==2.0.1"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict {args}"
serve = "mkdocs serve --dev-addr localhost:8000 {args}"
# added because ReadTheDocs was having issues with passing args
buildRtd = "mkdocs build --clean --strict --site-dir $READTHEDOCS_OUTPUT/html"

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "pytest-metadata==3.1.1",
  "pytest-asyncio==1.3.0",
  "aiohttp==3.13.5",
]

[tool.hatch.envs.hatch-test.scripts]
run-cov = "coverage run -m pytest {args} && coverage report --show-missing"
run = "pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = "coverage report"

# python will make breaking changes in minor versions, so we should always test on all current non-EOL versions.
[[tool.hatch.envs.hatch-test.matrix]]
python = ["310", "311", "312", "313", "314"]

[tool.hatch.envs.bench]
dependencies = ["pyperf==2.6.2"]

[tool.hatch.envs.bench.scripts]
bench = "rm bench.json; python bench.py -o bench.json"
stats = "pyperf stats bench.json"

[tool.coverage.run]
source = ["ironcore_alloy", "tests"]
branch = true
parallel = true
omit = ["ironcore_alloy/__about__.py"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class _Uniffi",
  "def _uniffi",
  "_Uniffi",
]
